--- a/index.html
+++ b/index.html
@@ -429,22 +429,22 @@
 
 
 
-  <!-- <footer class="bg-green-600 w-full px-4 pt-[300px] py-[100px] lg:px-[200px] lg:pb-[130px] lg:pt-[350px]">
+   <footer class="bg-green-600 w-full px-4 pt-[300px]  lg:pt-[350px]">
      <div class="grid grid-cols-1 lg:grid-cols-3 justify-end items-end">
-      <div class="space-y-6">
+      <div class="lg:space-y-6">
         <img src="c2-assets/logo-footer.png" alt="">
-        <p class="text-white text-xl w-[400px]">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
+        <p class="text-white text-xl ">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
       </div>
       <div class="lg:mb-4">
-        <ul class="pt-8 lg:pt-0 lg:pl-[150px] lg:space-y-8 space-y-2">
+        <ul class=" lg:pt-0 lg:pl-[150px] lg:space-y-8">
           <li><a class="text-white text-xl hover:bg-white hover:text-blue-600" href="#">Product</a></li>
           <li><a class="text-white text-xl  hover:bg-white hover:text-blue-600" href="#">Services</a></li>
           <li><a class="text-white text-xl  hover:bg-white hover:text-blue-600" href="#">Contact us</a></li>
         </ul>
       </div>
       <div class="lg:pl-[200px] lg:mb-4">
-        <p class="text-white text-xl pt-8 lg:pt-0  pb-4">Follow Us</p>
-        <div class="flex gap-8">
+        <p class="text-white text-xl  ">Follow Us</p>
+        <div class="flex">
           <a class="text-2xl transform hover:scale-110" href="#"><i class="fa-brands fa-facebook text-white"></i></a>
           <a class="text-2xl transform hover:scale-110"href="#"><i class="fa-brands fa-instagram text-white"></i></a>
           <a class="text-2xl transform hover:scale-110"href="#"><i class="fa-brands fa-linkedin text-white"></i></a>
@@ -455,7 +455,7 @@
 
      </div>
   </footer>
-    -->
+    
     
 </body>
 </html>
