--- a/index.html
+++ b/index.html
@@ -429,11 +429,11 @@
 
 
 
-   <footer class="bg-green-600 w-full px-4 pt-[300px]  lg:pt-[350px] ">
+   <footer class="bg-green-600 w-full px-4 pt-[300px]  lg:pt-[350px] lg:pb-[100px]">
      <div class="grid grid-cols-1 lg:grid-cols-3 justify-end items-end">
-      <div class="lg:space-y-6">
+      <div class="lg:space-y-6 lg:ml-[100px]">
         <img src="c2-assets/logo-footer.png" alt="">
-        <p class="text-white text-xl mt-2 mb-8">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
+        <p class="text-white text-xl my-4">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
       </div>
       <div class="lg:mb-4">
         <ul class=" lg:pt-0 lg:pl-[150px] lg:space-y-8 space-y-4">
@@ -442,8 +442,8 @@
           <li><a class="text-white text-xl  hover:bg-white hover:text-blue-600" href="#">Contact us</a></li>
         </ul>
       </div>
-      <div class="lg:pl-[200px] lg:mb-4">
-        <p class="text-white text-xl mt-6 mb-2 ">Follow Us</p>
+      <div class="lg:pl-[200px]">
+        <p class="text-white text-xl my-8 ">Follow Us</p>
         <div class="flex gap-4 pb-8">
           <a class="text-2xl transform hover:scale-110" href="#"><i class="fa-brands fa-facebook text-white"></i></a>
           <a class="text-2xl transform hover:scale-110"href="#"><i class="fa-brands fa-instagram text-white"></i></a>
