--- a/index.html
+++ b/index.html
@@ -342,13 +342,13 @@
        <div class=" lg:h-[300px] w-full p-2 bg-blue-900 rounded-xl lg:px-4 lg:w-[450px]">
         <!-- blue part -->
         <div class="flex lg:justify-between items-center">
-         <div class="lg:space-y-4  lg:w-2/4 mb-4  ">
-          <img class="  lg:h-[130px] " src="c2-assets/india-gate-logo.png" alt="">
-          <button class="lg:w-[250px] lg: h-[30px]   border-none lg:h-[50px] rounded-xl bg-blue-500 lg:text-xl text-white">World’s No.1 Rice</button>
+         <div class="lg:space-y-4 space-y-2  lg:w-2/4 mb-4 pl-2 ">
+          <img class="  lg:h-[130px] h-[80px] " src="c2-assets/india-gate-logo.png" alt="">
+          <button class="lg:w-[250px] w-[200px] h-[30px]   border-none lg:h-[50px] rounded-xl bg-blue-500 lg:text-xl text-white">World’s No.1 Rice</button>
           <p class="text-white lg:font-normal lg:text-3xl text-xl lg:w-[250px]  lg:pb-4">UP to <span class="font-bold">40% OFF</span></p>
          </div>
-         <div class=" lg:h-[300px] lg:w-2/4  ml-12 lg:mb-4"> 
-          <img class="lg:h-full" src="c2-assets/india-gate-mock-up.png" alt="">
+         <div class=" lg:h-[300px] h-[180px]  w-2/4  ml-12 lg:mb-4"> 
+          <img class="lg:h-full h-full" src="c2-assets/india-gate-mock-up.png" alt="">
          </div>
  
         </div>
