--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
           <button class="lg:w-[250px] w-[200px] h-[30px]   border-none lg:h-[50px] rounded-xl bg-blue-500 lg:text-xl text-white">World’s No.1 Rice</button>
           <p class="text-white lg:font-normal lg:text-3xl text-xl lg:w-[250px]  lg:pb-4">UP to <span class="font-bold">40% OFF</span></p>
          </div>
-         <div class=" lg:h-[300px] h-[180px]  w-2/4  ml-12 lg:mb-4"> 
-          <img class="lg:h-full h-full" src="c2-assets/india-gate-mock-up.png" alt="">
+         <div class=" lg:h-[300px] h-[160px] w-[150px]  lg:w-2/4  ml-12 lg:mb-4"> 
+          <img class="w-full h-full" src="c2-assets/india-gate-mock-up.png" alt="">
          </div>
  
         </div>
@@ -444,7 +444,7 @@
       </div>
       <div class="lg:pl-[200px]">
         <p class="text-white text-xl my-8 ">Follow Us</p>
-        <div class="flex gap-4 pb-8">
+        <div class="flex gap-4 pb-8 lg:pb-1">
           <a class="text-2xl transform hover:scale-110" href="#"><i class="fa-brands fa-facebook text-white"></i></a>
           <a class="text-2xl transform hover:scale-110"href="#"><i class="fa-brands fa-instagram text-white"></i></a>
           <a class="text-2xl transform hover:scale-110"href="#"><i class="fa-brands fa-linkedin text-white"></i></a>
