--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
          
        </div>
        <!-- dawat nil -->
-       <div class=" lg:h-[300px] w-full p-2 bg-blue-900 rounded-xl lg:px-4 lg:w-[450px]">
+       <div class=" lg:h-[300px] h-[200px] w-full pt-4 px-2 bg-blue-900 rounded-xl lg:px-4 lg:w-[450px]">
         <!-- blue part -->
         <div class="flex lg:justify-between items-center">
          <div class="lg:space-y-4 space-y-2  lg:w-2/4 mb-4 pl-2 ">
