added last section

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           <button class="lg:w-[250px] w-[200px] h-[30px]   border-none lg:h-[50px] rounded-xl bg-blue-500 lg:text-xl text-white">World’s No.1 Rice</button>
           <p class="text-white lg:font-normal lg:text-3xl text-xl lg:w-[250px]  lg:pb-4">UP to <span class="font-bold">40% OFF</span></p>
          </div>
-         <div class=" lg:h-[300px] h-[160px] w-[150px]  lg:w-2/4  ml-12 lg:mb-4"> 
+         <div class=" lg:h-[250px] h-[160px] w-[180px]  lg:w-2/4  ml-12 lg:mt-8"> 
           <img class="w-full h-full" src="c2-assets/india-gate-mock-up.png" alt="">
          </div>
  
